FIX: CSS was broken on Header and Footer. Created new navigation for mobile (inspired by ant-mobile). Added Route type.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,13 @@
+html,
+body,
+#root,
+.App {
+    height: 100%;
+}
+
 body {
     margin: 0;
-    background-color: #141414;
-    height: 100vh;
-    max-height: 100vh;
+    max-height: 100%;
     color: white;
 }
 
@@ -25,6 +30,10 @@ body {
 
     .mainlayout-header {
         justify-content: center;
+    }
+
+    .mainlayout-bottom-nav::before {
+        display: none;
     }
 }
 
